[tool.poetry]
name = "ubank"
version = "0.1.2"
description = "Access ubank programatically."
authors = ["eidorb"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
