[project]
name = "ubank"
dynamic = ["version"]
description = "Access ubank.com.au with Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "eidorb"}]
dependencies = [
    "httpx>=0.28.1",
    "soft-webauthn>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ubank.py"
