[project]
name = "ubank"
dynamic = ["version"]
description = "Access ubank.com.au with Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "eidorb"}]
dependencies = [
    "httpx>=0.28.1",
    "meatie>=0.1.20",
    "pydantic>=2.10.6",
    "soft-webauthn>=0.1.4",
]

[dependency-groups]
dev = [
    "marimo>=0.11.7",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ubank.py"

[tool.hatch.build.targets.sdist]
exclude = ["notebook.gif"]

[tool.hatch.build.targets.wheel]
include = [
    "ubank.py",
    "soft_webauthn_patched.py",
]

[project.scripts]
ubank = "ubank:cli"
